# agent-anatomy

./: .gitignore  CLAUDE.md  README.en.md  README.md  claude-code-subagent-vs-agent-teams-research.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-18-agent-team-analysis-plan.md
docs/superpowers/specs/: 2026-06-18-agent-team-analysis-design.md
src/agent_anatomy/: cli.py  collect.py  comparator.py  errors.py  graph.py  parser.py  roles.py  state_machine.py  timeline.py  watch.py
src/agent_anatomy/templates/: _timeline.js.j2  report.html.j2
src/analysis_tool/: cli.py  collect.py  comparator.py  graph.py  models.py  parser.py  roles.py  state_machine.py  timeline.py  watch.py
src/analysis_tool/templates/: report.html.j2  timeline.html.j2
tests/: test_collect.py  test_comparator.py  test_errors.py  test_graph.py  test_models.py  test_parser.py  test_report_html.py  test_roles.py  test_state_machine.py  test_team_mode.py  test_timeline.py  test_watch.py  test_workflow_mode.py
tests/fixtures/: session-tasks.jsonl  session.jsonl
tests/fixtures/subagents/: agent-a0.jsonl  agent-a0.meta.json
tests/fixtures/team/raw/: session.jsonl  team-config.json  team-events.jsonl
tests/fixtures/workflow/raw/: session.jsonl
tests/fixtures/workflow/raw/subagents/workflows/wf_x/: agent-w1.jsonl  agent-w2.jsonl  agent-w3.jsonl
tests/fixtures/workflow/raw/workflows/: wf_x.json
